10.1.13
------

10.1.12
------
(RB=948600)
Disable TranslateSchemas task in pegasus plugin. It was incorrectly being enabled for all source sets.

10.1.11
------
(RB=940808)
Add gradle task to translate .pdsc to .pdl
(RB=945938)
Increase d2 quarantine pre-check retry times


10.1.10
------
(RB=945616)
Added new constructor for DelegatingTransportDispatcher which takes StreamRequestHandler


10.1.9
------
(RB=924582)
Modify .pdl grammar to support nested namespace/package scopes.

(RB=894913)
Added ability to share data between filters and resources.

10.1.8
------
(RB=934222)
Make RestClient get DisruptRestController from DisruptRestControllerContainer every time

10.1.7
------
(RB=933581)
Support null resolverPaths in DataSchemaParser to fix regression.

10.1.6
------
(RB=930255)
Fix LoadBalancerStrategyPropertiesConverter to serialize quarantine properties with or without maxPercentage property present

10.1.5
------
(RB=925594)
Fix the issue that ZooKeeperAnnouncerJmxMBean does not return a open type
(RB=927901)
Fix streaming timeout non-active if response entity stream can be buffered in memory

10.1.4
------
(RB=915139)
Ensuring cloned DataLists and DataMaps have unique __dataComplexHashCode values.
(RB=925965)
Bump up zero-allocation-hashing library version to the latest
(RB=922604)
Update documentation on CreateKVResponse and BatchCreateKVResult.
(RB=918607)
Add .pdsc to .pdl conversion support
(RB=876655)
Modify client compression filter header-setting behavior to allow null operations.

10.1.3
------
(RB=916286)
Fix d2 quarantine pre-healthchecking related issues

10.1.2
------
(RB=916880)
Support surrogate pairs for UTF-16 strings in URI encoding/decoding

10.1.1
------
(RB=906111)
Using Treemap to allow QueryTunnelUtil.decode to parse case insensitive http headers

10.1.0
------
Introduce .pdl file format for authoring Pegasus data schemas.

10.0.2
------
(RB=897071)
Reduce the error messages generated by quarantine
(RB=891773)