@@ -1,5 +1,5 @@
 namespace com.linkedin.pegasus.generator.test.idl.records
 
 record RecursivelyDefinedRecord {
-  self: RecursivelyDefinedRecord?
+  self: optional RecursivelyDefinedRecord
 }
