@@ -4,7 +4,7 @@ record WithInlineRecord {
   inline: record InlineRecord {
     value: int
   }
-  inlineOptional: record InlineOptionalRecord {
+  inlineOptional: optional record InlineOptionalRecord {
     value: string
-  }?
+  }
 }
