@@ -3,12 +3,12 @@ namespace com.linkedin.pegasus.generator.test.idl.records
 import com.linkedin.pegasus.generator.test.idl.enums.Fruits
 
 record WithOptionalPrimitiveDefaults {
-  intWithDefault: int? = 1
-  longWithDefault: long? = 3000000000
-  floatWithDefault: float? = 3.3
-  doubleWithDefault: double? = 4.4e38
-  booleanWithDefault: boolean? = true
-  stringWithDefault: string? = "DEFAULT"
-  bytesWithDefault: bytes? = ""
-  enumWithDefault: Fruits? = "APPLE"
+  intWithDefault: optional int = 1
+  longWithDefault: optional long = 3000000000
+  floatWithDefault: optional float = 3.3
+  doubleWithDefault: optional double = 4.4e38
+  booleanWithDefault: optional boolean = true
+  stringWithDefault: optional string = "DEFAULT"
+  bytesWithDefault: optional bytes = ""
+  enumWithDefault: optional Fruits = "APPLE"
 }
