@@ -3,7 +3,7 @@ namespace com.linkedin.pegasus.generator.test.idl.typerefs
 typeref UnionWithInlineRecord = union[
 
   record InlineRecord {
-    value: int?
+    value: optional int
   },
 
   record InlineRecord2 {}
